# GPUA

./: .gitignore
project/: CMakeLists.txt
project/reports/: classic.nsys-rep  industrial.nsys-rep
project/src/: config.h  cuda_streams.cu  cuda_streams.cuh  fix_cpu.cu  fix_gpu.cu  fix_gpu.cuh  fix_gpu_industrial.cu  fix_gpu_industrial.cuh  image.hh  kernels.cu  kernels.cuh  main.cu  trash.cu  utils.cuh
project/src/CUB_Thrust/: compact.cu  compact.cuh  compact_scan.cu  histogram.cu  histogram.cuh  map.cu  map.cuh
project/src/kernels/: filter.cu  filter.cuh  histogram.cu  histogram.cuh  reduce.cu  reduce.cuh  scan.cu  scan.cuh  utils.cuh
project_student/: CMakeLists.txt  README.md
project_student/src/: main.cu
project_student/src/kernels/: reduce.cu  reduce.cuh  scan.cu  scan.cuh
tp_reduce/: CMakeLists.txt  README.md
tp_reduce/bench/: fixture.hh  main.cc  test_helpers.hxx
tp_reduce/src/: to_bench.cu
tp_reduce/src/cuda_tools/: host_shared_ptr.cuh
tp_scan_fetch_content/: CMakeLists.txt
tp_scan_fetch_content/bench/: test_helpers.hxx
tp_scan_fetch_content/src/: to_bench.cu
